# id-sixel

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  Sixel.idr  sixel.ipkg  sixelutils.c
Sixel/: Allocator.idr  Decoder.idr  Dither.idr  Encoder.idr  Helpers.idr  Library.idr  Output.idr  Symbols.idr
examples/: decode-lena.idr  encode-24bit-rgb888-bmp.idr  encode-file-hq.idr  lena512.sixel
